force-app/main/default/objects/NI_Integration_Log_Message__c/NI_Integration_Log_Message__c.object-meta.xml
<CustomObject>
    <description>Child object of NI Integration Log, used to keep track of resend failed messages.</description>
    <label>NI Integration Log Message</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NI Integration Log Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NI Integration Log Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>