force-app/main/default/objects/NI_Integration_Log_Message__c/fields/HTTP_Response_Header__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Response_Header__c</fullName>
    <description>Header of the response from server</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Header of the response from server</inlineHelpText>
    <label>HTTP Response Header</label>
    <type>TextArea</type>
</CustomField>