force-app/main/default/objects/NI_Integration_Log_Message__c/fields/Message_Processed_Time__c.field-meta.xml
<CustomField>
    <fullName>Message_Processed_Time__c</fullName>
    <description>It shows time when message is processed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It shows time when message is processed.</inlineHelpText>
    <label>Message Processed Time</label>
    <type>DateTime</type>
</CustomField>