force-app/main/default/objects/NI_Integration_Log_Message__c/fields/NI_Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>NI_Integration_Log__c</fullName>
    <description>Integration Log ID</description>
    <label>NI Integration Log</label>
    <referenceTo>NI_Integration_Log__c</referenceTo>
    <relationshipLabel>NI Integration Log Messages</relationshipLabel>
    <relationshipName>NI_Integration_Log_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>