force-app/main/default/objects/NI_Integration_Log_Message__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Detailed Request to server</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detailed Request to server</inlineHelpText>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>