force-app/main/default/objects/NI_Integration_Log_Message__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Detailed response from server</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Detailed response from server</inlineHelpText>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>