force-app/main/default/objects/NI_Integration_Log_Message__c/fields/Salesforce_Exception__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Exception__c</fullName>
    <description>Exception occurred while sending the request</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Exception occurred while sending the request</inlineHelpText>
    <label>Salesforce Exception</label>
    <type>TextArea</type>
</CustomField>